--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,13 @@
 	</parent>
 	<groupId>com.api</groupId>
 	<artifactId>parking-control</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>parking-control</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Api de cadastro</description>
 	<properties>
 		<java.version>11</java.version>
 		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
 	</properties>
 	<dependencies>
 		<dependency>
